@@ -76,10 +76,26 @@ throws|throws
 name|Exception
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|fields
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|fields
@@ -129,6 +145,10 @@ operator|new
 name|SimpleDateFormat
 argument_list|(
 literal|"MM/dd/yyyy"
+argument_list|,
+name|Locale
+operator|.
+name|ROOT
 argument_list|)
 decl_stmt|;
 name|Date
@@ -149,6 +169,11 @@ argument_list|)
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|row
 init|=
 name|createMap
@@ -239,10 +264,26 @@ throws|throws
 name|Exception
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|fields
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|fields
@@ -292,6 +333,10 @@ operator|new
 name|SimpleDateFormat
 argument_list|(
 literal|"MM/dd/yyyy hh:mm:ss.SSS"
+argument_list|,
+name|Locale
+operator|.
+name|ROOT
 argument_list|)
 decl_stmt|;
 name|Date
@@ -329,17 +374,33 @@ argument_list|)
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|row
 init|=
 operator|new
 name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|List
+argument_list|<
+name|String
+argument_list|>
 name|list
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|String
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|list
@@ -423,10 +484,16 @@ name|context
 argument_list|)
 expr_stmt|;
 name|List
+argument_list|<
+name|Object
+argument_list|>
 name|output
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Object
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|output
