@@ -97,7 +97,11 @@ name|GROUPING_SEP
 init|=
 operator|new
 name|DecimalFormatSymbols
-argument_list|()
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
 operator|.
 name|getGroupingSeparator
 argument_list|()
@@ -109,18 +113,22 @@ name|DECIMAL_SEP
 init|=
 operator|new
 name|DecimalFormatSymbols
-argument_list|()
+argument_list|(
+name|Locale
+operator|.
+name|ROOT
+argument_list|)
 operator|.
 name|getDecimalSeparator
 argument_list|()
 decl_stmt|;
 annotation|@
-name|Test
-annotation|@
 name|SuppressWarnings
 argument_list|(
 literal|"unchecked"
 argument_list|)
+annotation|@
+name|Test
 DECL|method|testTransformRow_SingleNumber
 specifier|public
 name|void
@@ -142,10 +150,26 @@ name|getGroupingSeparator
 argument_list|()
 decl_stmt|;
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -215,6 +239,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -296,10 +325,26 @@ throws|throws
 name|Exception
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|fields
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|fields
@@ -345,10 +390,16 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|List
+argument_list|<
+name|String
+argument_list|>
 name|inputs
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|String
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|inputs
@@ -374,6 +425,11 @@ literal|"678"
 argument_list|)
 expr_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|row
 init|=
 name|createMap
@@ -431,10 +487,16 @@ name|context
 argument_list|)
 expr_stmt|;
 name|List
+argument_list|<
+name|Long
+argument_list|>
 name|output
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Long
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|output
@@ -460,6 +522,11 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|outputRow
 init|=
 name|createMap
@@ -502,10 +569,26 @@ name|testTransformRow_InvalidInput1_Number
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -549,6 +632,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -595,10 +683,26 @@ name|testTransformRow_InvalidInput2_Number
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -642,6 +746,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -688,10 +797,26 @@ name|testTransformRow_InvalidInput2_Currency
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -735,6 +860,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -781,10 +911,26 @@ name|testTransformRow_InvalidInput1_Percent
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -828,6 +974,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -874,10 +1025,26 @@ name|testTransformRow_InvalidInput3_Currency
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -921,6 +1088,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -971,10 +1143,26 @@ name|testTransformRow_InvalidInput3_Number
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -1018,6 +1206,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
@@ -1061,10 +1254,26 @@ name|testTransformRow_MalformedInput_Number
 parameter_list|()
 block|{
 name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 name|l
 init|=
 operator|new
 name|ArrayList
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
 argument_list|()
 decl_stmt|;
 name|l
@@ -1108,6 +1317,11 @@ literal|null
 argument_list|)
 decl_stmt|;
 name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|m
 init|=
 name|createMap
